# Sparrow-Rasterizer

./: CMakeLists.txt  README.md
.cache/clangd/index/: app.cpp.6EE3C1D8E5206AC9.idx  app.hpp.9FB3F03515A4EE7C.idx  camera.cpp.BAF9A2F59794AA0A.idx  camera.hpp.987A5E871AA4EAAC.idx  command_type.cpp.BE178F3D039E77EE.idx  command_type.hpp.AFA749C40DBD245C.idx  depth_buffer.cpp.AFD29CB4E802CB85.idx  depth_buffer.hpp.C45C1B08F3154C69.idx  fragment_stage.cpp.107B2D45A9CF84E2.idx  fragment_stage.hpp.549AD8C6EE9F4399.idx  graphics_pipeline.cpp.5B149B9E3E780A62.idx  graphics_pipeline.hpp.1E59EEBDD702680D.idx  main.cpp.3CA0780647EADD20.idx  mesh_type.cpp.5EF499479FBC0AC0.idx  mesh_type.hpp.3E1E9823EF0FC894.idx  model_type.cpp.68BA3EDEA7692A4A.idx  model_type.hpp.19B3694205660E99.idx  obj_loader.cpp.136E95CA18866FF5.idx  obj_loader.hpp.263D2A98E1B03BC7.idx  pixel_buffer.cpp.992C650433716B18.idx  pixel_buffer.hpp.FC3C99D0B0ED851F.idx  pixel_type.cpp.421DB710BD4B5D72.idx  pixel_type.hpp.FF6E33CBABBD43FD.idx  raster_stage.cpp.27942184A9EE69EE.idx  raster_stage.hpp.2A59D8A8C8EE413C.idx  scene.cpp.E178E799E65EB685.idx  scene.hpp.BE3755F0E129995E.idx  triangle_type.cpp.8CF5320DADC9C611.idx  triangle_type.hpp.2A4B2A50CD39496A.idx  vertex_stage.cpp.E902350B07126BF8.idx  vertex_stage.hpp.9D01BD6EE3F68F26.idx  vertex_type.cpp.19E3B430BA5B583B.idx  vertex_type.hpp.F5B54871C1E6A3BF.idx  window_init.cpp.8D677CAEE8C8DB6E.idx  window_init.hpp.2E528C9FB1FEAC6B.idx
include/sparrow_rasterizer/loader/: app.hpp  obj_loader.hpp
include/sparrow_rasterizer/pipeline/: fragment_stage.hpp  graphics_pipeline.hpp  raster_stage.hpp  vertex_stage.hpp
include/sparrow_rasterizer/utils/: camera.hpp  command_type.hpp  depth_buffer.hpp  mesh_type.hpp  model_type.hpp  pixel_buffer.hpp  pixel_type.hpp  scene.hpp  triangle_type.hpp  vertex_type.hpp
include/sparrow_rasterizer/windowing/: window_init.hpp
src/: main.cpp
src/loader/: app.cpp  obj_loader.cpp
src/pipeline/: fragment_stage.cpp  graphics_pipeline.cpp  raster_stage.cpp  vertex_stage.cpp
src/utils/: camera.cpp  command_type.cpp  depth_buffer.cpp  mesh_type.cpp  model_type.cpp  pixel_buffer.cpp  pixel_type.cpp  scene.cpp  triangle_type.cpp  vertex_type.cpp
src/windowing/: window_init.cpp
